lib/src/generated/executorch_ffi_bindings.dart

// Auto-generated FFI bindings for ExecuTorch Flutter C wrapper.
// DO NOT EDIT - regenerate using: dart run ffigen
//
// Generated from: src/c_wrapper/executorch_flutter_wrapper.h
// Configuration: ffigen.yaml

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Auto-generated FFI bindings for ExecuTorch Flutter C wrapper
class ExecutorchFfiBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  ExecutorchFfiBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  ExecutorchFfiBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// @brief Get human-readable error code name
  ///
  /// @param code Error code
  /// @return Constant string describing the error code (e.g., "ET_FLUTTER_SUCCESS")
  /// Returns "UNKNOWN_ERROR_CODE" for invalid codes
  ///
  /// @note The returned string is constant and should not be freed
  ffi.Pointer<ffi.Char> et_flutter_error_code_name(
    ETFlutterErrorCode code,
  ) {
    return _et_flutter_error_code_name(
      code.value,
    );
  }

  late final _et_flutter_error_code_namePtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.UnsignedInt)>>(
      'et_flutter_error_code_name');
  late final _et_flutter_error_code_name = _et_flutter_error_code_namePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  /// @brief Load an ExecuTorch model from a file path
  ///
  /// This function loads a .pte model file, validates it, and returns a handle
  /// that can be used for inference operations. The model remains loaded until
  /// explicitly disposed via et_flutter_dispose_model() or automatically freed
  /// by Dart's NativeFinalizer.
  ///
  /// @param file_path Absolute path to a .pte model file (null-terminated UTF-8)
  /// @return Load result containing model handle and error information
  ///
  /// @note The returned model_handle must be freed via et_flutter_dispose_model()
  /// @note If error.code != ET_FLUTTER_SUCCESS, model_handle will be NULL
  ///
  /// @par Thread Safety
  /// This function is not thread-safe. Call from a single thread only.
  ///
  /// @par Example
  /// @code
  /// ETFlutterLoadResult result = et_flutter_load_model("/path/to/model.pte");
  /// if (result.error.code != ET_FLUTTER_SUCCESS) {
  /// fprintf(stderr, "Load failed: %s\n", result.error.message);
  /// return;
  /// }
  /// // Use result.model_handle for inference...
  /// et_flutter_dispose_model(result.model_handle);
  /// @endcode
  ETFlutterLoadResult et_flutter_load_model(
    ffi.Pointer<ffi.Char> file_path,
  ) {
    return _et_flutter_load_model(
      file_path,
    );
  }

  late final _et_flutter_load_modelPtr = _lookup<
          ffi
          .NativeFunction<ETFlutterLoadResult Function(ffi.Pointer<ffi.Char>)>>(
      'et_flutter_load_model');
  late final _et_flutter_load_model = _et_flutter_load_modelPtr
      .asFunction<ETFlutterLoadResult Function(ffi.Pointer<ffi.Char>)>();

  /// @brief Run inference on a loaded model
  ///
  /// This function executes the model's forward pass with the provided input tensors
  /// and returns output tensors. The input tensor data is read (zero-copy) but not
  /// modified or freed. Output tensor data is allocated by this function and must be
  /// freed by calling et_flutter_free_forward_output().
  ///
  /// @param model_handle Handle to a loaded model (from et_flutter_load_model)
  /// @param input Input tensor data (Dart owns, C reads only)
  /// @return Forward output containing result tensors and error information
  ///
  /// @note Caller must call et_flutter_free_forward_output() to free output memory
  /// @note If error.code != ET_FLUTTER_SUCCESS, num_outputs will be 0
  ///
  /// @par Thread Safety
  /// This function is not thread-safe. Do not call simultaneously with the same model_handle.
  ///
  /// @par Example
  /// @code
  /// ETFlutterForwardInput input = { .num_inputs = 1, .inputs = {&tensor} };
  /// ETFlutterForwardOutput output = et_flutter_forward(model_handle, &input);
  /// if (output.error.code != ET_FLUTTER_SUCCESS) {
  /// fprintf(stderr, "Inference failed: %s\n", output.error.message);
  /// return;
  /// }
  /// // Use output.outputs[0]->data...
  /// et_flutter_free_forward_output(&output);
  /// @endcode
  ETFlutterForwardOutput et_flutter_forward(
    ETFlutterModelHandle model_handle,
    ffi.Pointer<ETFlutterForwardInput> input,
  ) {
    return _et_flutter_forward(
      model_handle,
      input,
    );
  }

  late final _et_flutter_forwardPtr = _lookup<
      ffi.NativeFunction<
          ETFlutterForwardOutput Function(ETFlutterModelHandle,
              ffi.Pointer<ETFlutterForwardInput>)>>('et_flutter_forward');
  late final _et_flutter_forward = _et_flutter_forwardPtr.asFunction<
      ETFlutterForwardOutput Function(
          ETFlutterModelHandle, ffi.Pointer<ETFlutterForwardInput>)>();

  /// @brief Dispose a loaded model and free associated resources
  ///
  /// This function frees all memory associated with the model handle, including
  /// internal ExecuTorch module data. After calling this function, the model_handle
  /// becomes invalid and must not be used again.
  ///
  /// @param model_handle Handle to dispose (from et_flutter_load_model)
  ///
  /// @note It is safe to pass NULL (no-op)
  /// @note Calling with an already-disposed handle is undefined behavior
  /// @note This function does not return an error (best-effort cleanup)
  ///
  /// @par Thread Safety
  /// This function is not thread-safe. Do not call simultaneously with the same model_handle.
  ///
  /// @par Example
  /// @code
  /// et_flutter_dispose_model(model_handle);
  /// model_handle = NULL;  // Prevent accidental reuse
  /// @endcode
  void et_flutter_dispose_model(
    ETFlutterModelHandle model_handle,
  ) {
    return _et_flutter_dispose_model(
      model_handle,
    );
  }

  late final _et_flutter_dispose_modelPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ETFlutterModelHandle)>>(
          'et_flutter_dispose_model');
  late final _et_flutter_dispose_model = _et_flutter_dispose_modelPtr
      .asFunction<void Function(ETFlutterModelHandle)>();

  /// @brief Free output tensors allocated by et_flutter_forward()
  ///
  /// This function frees all memory allocated for output tensors, including
  /// tensor data buffers and metadata structures. After calling this function,
  /// the output pointer and all nested pointers become invalid.
  ///
  /// @param output Pointer to output structure (from et_flutter_forward)
  ///
  /// @note It is safe to pass NULL (no-op)
  /// @note Calling with already-freed output is undefined behavior
  /// @note This function does not return an error (best-effort cleanup)
  ///
  /// @par Example
  /// @code
  /// ETFlutterForwardOutput output = et_flutter_forward(model_handle, &input);
  /// // Copy output data to Dart...
  /// et_flutter_free_forward_output(&output);
  /// @endcode
  void et_flutter_free_forward_output(
    ffi.Pointer<ETFlutterForwardOutput> output,
  ) {
    return _et_flutter_free_forward_output(
      output,
    );
  }

  late final _et_flutter_free_forward_outputPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<ETFlutterForwardOutput>)>>(
      'et_flutter_free_forward_output');
  late final _et_flutter_free_forward_output =
      _et_flutter_free_forward_outputPtr
          .asFunction<void Function(ffi.Pointer<ETFlutterForwardOutput>)>();

  /// @brief Get the size in bytes of a tensor data type
  ///
  /// @param dtype Tensor data type
  /// @return Size in bytes (e.g., 4 for FLOAT32, 1 for UINT8)
  /// Returns 0 for invalid types
  ///
  /// @par Example
  /// @code
  /// size_t element_size = et_flutter_dtype_size(ET_FLUTTER_DTYPE_FLOAT32);  // 4
  /// @endcode
  int et_flutter_dtype_size(
    ETFlutterDataType dtype,
  ) {
    return _et_flutter_dtype_size(
      dtype.value,
    );
  }

  late final _et_flutter_dtype_sizePtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.UnsignedInt)>>(
          'et_flutter_dtype_size');
  late final _et_flutter_dtype_size =
      _et_flutter_dtype_sizePtr.asFunction<int Function(int)>();

  /// @brief Get human-readable name of a tensor data type
  ///
  /// @param dtype Tensor data type
  /// @return Constant string (e.g., "float32", "int8")
  /// Returns "unknown" for invalid types
  ///
  /// @note The returned string is constant and should not be freed
  ffi.Pointer<ffi.Char> et_flutter_dtype_name(
    ETFlutterDataType dtype,
  ) {
    return _et_flutter_dtype_name(
      dtype.value,
    );
  }

  late final _et_flutter_dtype_namePtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.UnsignedInt)>>(
      'et_flutter_dtype_name');
  late final _et_flutter_dtype_name = _et_flutter_dtype_namePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  /// @brief Calculate total number of elements in a tensor shape
  ///
  /// @param shape Pointer to tensor shape
  /// @return Total element count (product of all dimensions)
  /// Returns 0 if shape is NULL or invalid
  ///
  /// @par Example
  /// @code
  /// ETFlutterTensorShape shape = { .num_dims = 4, .dims = {1, 3, 224, 224} };
  /// size_t count = et_flutter_shape_element_count(&shape);  // 150528
  /// @endcode
  int et_flutter_shape_element_count(
    ffi.Pointer<ETFlutterTensorShape> shape,
  ) {
    return _et_flutter_shape_element_count(
      shape,
    );
  }

  late final _et_flutter_shape_element_countPtr = _lookup<
          ffi.NativeFunction<
              ffi.Size Function(ffi.Pointer<ETFlutterTensorShape>)>>(
      'et_flutter_shape_element_count');
  late final _et_flutter_shape_element_count =
      _et_flutter_shape_element_countPtr
          .asFunction<int Function(ffi.Pointer<ETFlutterTensorShape>)>();

  /// @brief Validate tensor data for correctness
  ///
  /// Validates that:
  /// - Shape has valid dimensions (1-8 dims, all positive)
  /// - Data type is valid
  /// - Data pointer is not NULL
  /// - Data size matches shape and dtype
  ///
  /// @param tensor Pointer to tensor data
  /// @param error Output error structure (populated on failure)
  /// @return ET_FLUTTER_SUCCESS on success, error code on failure
  ///
  /// @par Example
  /// @code
  /// ETFlutterError error;
  /// if (et_flutter_validate_tensor(&tensor, &error) != ET_FLUTTER_SUCCESS) {
  /// fprintf(stderr, "Invalid tensor: %s\n", error.message);
  /// }
  /// @endcode
  ETFlutterErrorCode et_flutter_validate_tensor(
    ffi.Pointer<ETFlutterTensorData> tensor,
    ffi.Pointer<ETFlutterError> error,
  ) {
    return ETFlutterErrorCode.fromValue(_et_flutter_validate_tensor(
      tensor,
      error,
    ));
  }

  late final _et_flutter_validate_tensorPtr = _lookup<
      ffi.NativeFunction<
          ffi.UnsignedInt Function(ffi.Pointer<ETFlutterTensorData>,
              ffi.Pointer<ETFlutterError>)>>('et_flutter_validate_tensor');
  late final _et_flutter_validate_tensor =
      _et_flutter_validate_tensorPtr.asFunction<
          int Function(
              ffi.Pointer<ETFlutterTensorData>, ffi.Pointer<ETFlutterError>)>();

  /// @brief Get library version string
  ///
  /// @return Constant version string (e.g., "1.0.0")
  ///
  /// @note The returned string is constant and should not be freed
  ffi.Pointer<ffi.Char> et_flutter_version() {
    return _et_flutter_version();
  }
